tests/paczka1/fuzzy1/17331214.err
Error in line 1: S371 A286 33,8
Error in line 9: J497dL7i S734 23,1
Error in line 4: 1M51dJO1f9 A286 58,1
Error in line 15: 1M51dJO1f9 S371 89,6
Error in line 14: J497dL7i S371 48,0
Error in line 35: S371 S734 12,4
Error in line 31: B9LbKYr A534 26,4
Error in line 28: 1M51dJO1f9 A286 37,5
